<resources>
    <string name="app_name">שביל הזהב</string>
    <string name="splash_quote">\"מנגינות מדומות, משטות, מזייפות, מטשטשות לי את שביל הזהב…\"</string>
    <string name="חזרה">חזרה</string>
    <string name="קשרקרובמנהל">קשר קרוב - מנהל</string>
    <string name="התקבלוהודעותחדשות">התקבלו הודעות חדשות ↓</string>
    <string name="כתובהודעה">כתוב הודעה…</string>
    <string name="דףמנהלים">דף מנהלים 🤐🤫</string>
    <string name="שלוםמנהליקר">שלום מנהל יקר</string>
    <string name="אפשרויותניהול">אפשרויות ניהול</string>
    <string name="טבלתמשתמשים">טבלת משתמשים</string>
    <string name="טבלתתיעודהמשחקים">טבלת תיעוד המשחקים</string>
    <string name="טבלתתמונותהתרופות">טבלת תמונות התרופות</string>
    <string name="קשרקרוב">קשר קרוב</string>
    <string name="ניהולקטגוריותקשרקרוב">ניהול קטגוריות קשר קרוב</string>
    <string name="משתמש">משתמש</string>
    <string name="התנתקות">התנתקות</string>
    <string name="דףהבית">דף הבית</string>
    <string name="צורקשר">צור קשר</string>
    <string name="יועץבינהמלאכותית">AI יועץ</string>
    <string name="הקלדכאןאתשאלתך">הקלד כאן את שאלתך…</string>
    <string name="שלחשאלה">שלח שאלה</string>
    <string name="תשובתהיועץ">תשובת היועץ</string>
    <string name="התשובהתוצגכאן">התשובה תוצג כאן…</string>
    <string name="דףראשי">דף ראשי</string>
    <string name="התחברות">התחברות</string>
    <string name="הרשמה">הרשמה</string>
    <string name="הגדרות">הגדרות</string>
    <string name="כתובתמייללפניות">כתובת מייל לפניות:</string>
    <string name="אימייל">shvilhazhav23contact@gmail.com</string>
    <string name="טקסטצורקשר">הרעיון לפרויקט עלה לאור התקופה הקשה שהמדינה עוברת בשנים האחרונות ולא מעט אירועים בהם אוכלוסיות מיוחדות ונזקקות נדרשו לעזרה גם בדברים הקטנים היומיומיים.</string>
    <string name="אייקוןצורקשר">אייקון צור קשר</string>
    <string name="שםמלא">שם מלא</string>
    <string name="אישור">אישור</string>
    <string name="ביטול">ביטול</string>
    <string name="ברוכיםהבאים">ברוכים הבאים</string>
    <string name="שםפרטי">שם פרטי</string>
    <string name="שםמשפחה">שם משפחה</string>
    <string name="תאריךלידה">תאריך לידה</string>
    <string name="כתובתאימייל">כתובת אימייל</string>
    <string name="סיסמה">סיסמה</string>
    <string name="שלוםמטופליקר">שלום מטופל יקר</string>
    <string name="רשימתהתרופותשלי">רשימת התרופות שלי</string>
    <string name="משחקזיכרון">משחק זיכרון</string>
    <string name="הוספתתרופה">הוספת תרופה</string>
    <string name="שמור">שמור</string>
    <string name="עריכתפרטימשתמש">עריכת פרטי משתמש</string>
    <string name="הוסף">הוסף</string>
    <string name="פרטים">פרטים</string>
    <string name="שםהתרופה">שם התרופה</string>
    <string name="תאריךאחרוןלשימוש">תאריך אחרון לשימוש</string>
    <string name="הוספתמשתמש">הוספת משתמש</string>
    <string name="הקלדכאן">הקלד כאן…</string>
    <string name="חפשלפי">חפש לפי:</string>
    <string name="עריכתפרטים">עריכת פרטים</string>
    <string name="מצאיריב">מצא יריב</string>
    <string name="הוספתתמונהשלתרופה">הוספת תמונה של תרופה</string>
    <string name="חפשלפיid">חפש לפי ID (למשל card1)…</string>
    <string name="אפשרויות">אפשרויות</string>
    <string name="תמונתפרופיל">תמונת פרופיל</string>
    <string name="אייקוןמצלמה">אייקון מצלמה</string>
    <string name="הפוךלמנהל">הפוך למנהל</string>
    <string name="מחק">מחק</string>
    <string name="קלף">קלף</string>
    <string name="ערוך">ערוך</string>
    <string name="צלםתמונה">צלם תמונה</string>
    <string name="בחרמהגלריה">בחר מהגלריה</string>
    <string name="מחיקתתמונה">מחיקת תמונה</string>
    <string name="אייקון">אייקון</string>
    <string name="יציאה">יציאה</string>
    <string name="אייקוןתרופה">אייקון תרופה</string>
    <string name="אייקוןפורום">אייקון פורום</string>
    <string name="אייקוןיועץבינהמלאכותית">אייקון יועץ בינה מלאכותית</string>
    <string name="אייקוןמשחק">אייקון משחק</string>
    <string name="תמונתהאפליקציה">תמונת האפליקציה</string>
    <string name="שלחהודעה">שלח הודעה</string>
    <string name="ניצחונות">ניצחונות</string>
    <string name="אייקוןאימייל">אייקון אימייל</string>
    <string name="אייקוןסיסמה">אייקון סיסמה</string>
    <string name="בטלחיפוש">בטל חיפוש</string>
    <string name="הוראותהמשחק">הוראות המשחק</string>
    <string name="טקסט1משחק">משחק זיכרון תחרותי אונליין ראש בראש, המיועד לשיפור וחיזוק הזיכרון והמנצח נקבע לפי סך הנקודות הגבוה ביותר.</string>
    <string name="מטרתהמשחק">מטרת המשחק</string>
    <string name="טקסט2משחק">לנצח את היריב באמצעות צבירת מספר הנקודות הגבוה ביותר לאורך שלושת הסבבים.</string>
    <string name="כלליהמשחק">כללי המשחק</string>
    <string name="טקסט3משחק">• בכל תור נחשפים שני קלפים.</string>
    <string name="טקסט4משחק">• זוג תואם מזכה בנקודה ובתור נוסף.</string>
    <string name="טקסט5משחק">• זוג לא תואם מחזיר את הקלפים ומעביר את התור.</string>
    <string name="טקסט6משחק">• התאמה נכונה: 1+ נקודה.</string>
    <string name="שיטתהניקוד">שיטת הניקוד</string>
    <string name="טבלתמובילים">טבלת מובילים</string>
    <string name="אייקוןגביע">🏆</string>
    <string name="הוספתמשתמשחדש">הוספת משתמש חדש</string>
    <string name="סוגההתרופה">סוג התרופה</string>
    <string name="תרגיליחשבון">תרגילי חשבון</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="vi">✓</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="calc_back">⌫</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="clean">C</string>
    <string name="_0">0</string>
    <string name="חפשתרופה">חפש תרופה…</string>
    <string name="איפוסנתונים">איפוס נתונים</string>
    <string name="מחפשיריב">מחפש יריב…</string>
    <string name="שםקטגוריהחדשה">שם קטגוריה חדשה</string>
    <string name="קטגוריותקשרקרוב">קטגוריות קשר קרוב</string>
    <string name="פינתהשראהיומית">פינת השראה יומית</string>
    <string name="מצבכהה">מצב כהה</string>
    <string name="מצבבהיר">מצב בהיר</string>
    <string name="בחרשעותתזכורת">בחר שעות תזכורת</string>
    <string name="לאנבחרושעות">לא נבחרו שעות</string>

    <string-array name="search_types">
        <item>שם פרטי</item>
        <item>שם משפחה</item>
        <item>אימייל</item>
        <item>מנהלים</item>
        <item>משתמשים רגילים</item>
        <item>ניצחונות</item>
        <item>הכל</item>
    </string-array>
</resources>