<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_menu_main"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:fontFamily="@font/text_hebrew"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:singleLine="true"
            android:text="@string/דףראשי"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_menu_contact"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:fontFamily="@font/text_hebrew"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:singleLine="true"
            android:text="@string/צורקשר"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_menu_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:fontFamily="@font/text_hebrew"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:singleLine="true"
            android:text="@string/התחברות"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_menu_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="none"
            android:fontFamily="@font/text_hebrew"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:singleLine="true"
            android:text="@string/הרשמה"
            android:textSize="22sp" />

        <ImageButton
            android:id="@+id/btn_menu_settings"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/הגדרות"
            android:src="@drawable/ic_settings" />

    </LinearLayout>
</merge>
