<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="?attr/colorSurface">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/txtEditUserDialogTitle"
            android:layout_height="wrap_content"
            android:layout_width="400dp"
            android:gravity="center"
            android:text="@string/עריכתפרטימשתמש"
            android:textColor="@color/headline"
            android:textSize="35sp"
            android:fontFamily="@font/headline_hebrew"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditUserFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/שםפרטי"
                android:textSize="22sp"
                android:inputType="textPersonName"
                android:fontFamily="@font/text_hebrew"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditUserLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/שםמשפחה"
                android:textSize="22sp"
                android:inputType="textPersonName"
                android:fontFamily="@font/text_hebrew"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditUserBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/תאריךלידה"
                android:focusable="false"
                android:clickable="true"
                android:textSize="22sp"
                android:fontFamily="@font/text_hebrew"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundMode="outline"
            android:fontFamily="@font/text_english">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditUserEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/כתובתאימייל"
                android:inputType="textEmailAddress"
                android:textDirection="ltr"
                android:textSize="22sp"
                android:fontFamily="@font/text_hebrew"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            android:fontFamily="@font/text_english">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputEditUserPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/סיסמה"
                android:textSize="22sp"
                android:inputType="textPassword"
                android:fontFamily="@font/text_hebrew"/>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditUserSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@string/שמור"
                android:textSize="22sp"
                android:fontFamily="@font/text_hebrew"
                android:layout_margin="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEditUserCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="80dp"
                android:text="@string/ביטול"
                android:textSize="22sp"
                android:fontFamily="@font/text_hebrew"
                android:layout_margin="4dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>